# hub75-esp32

./: .clang-tidy  .gitignore  CMakeLists.txt  IMPLEMENTATION_PLAN.md  README.md  library.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml  release-drafter.yml
components/hub75/: CMakeLists.txt  Kconfig  README.md  idf_component.yml
components/hub75/include/: hub75.h  hub75_config.h  hub75_internal.h  hub75_types.h
components/hub75/src/color/: color_convert.cpp  color_convert.h  color_convert.hpp  color_lut.cpp  color_lut.h  color_lut.hpp
components/hub75/src/core/: hub75_driver.cpp
components/hub75/src/drivers/: driver_init.h  fm6126a.cpp
components/hub75/src/panels/: panel_layout.h  scan_patterns.h
docs/: ARCHITECTURE.md  BOARDS.md  COLOR_GAMMA.md  MEMORY_USAGE.md  MENUCONFIG.md  MULTI_PANEL.md  PLATFORMS.md  README.md  TROUBLESHOOTING.md
examples/: README.md
examples/01_basic/brightness/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/01_basic/gradients/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/01_basic/simple_colors/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/01_simple_test/: CMakeLists.txt  main.cpp
examples/02_multi_panel/layout_demo/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/03_lvgl/simple_demo/: CMakeLists.txt  README.md  sdkconfig.defaults
examples/common/: README.md  board_config.h  pins_example.h  sdkconfig.defaults.esp32p4
main/: CMakeLists.txt  Kconfig.projbuild  main.cpp  smoke_test.cpp
main/common/: pins_example.h
(+9 files in other folders)
